--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# unit tests coverage
+coveragereport
+
+
 # User-specific files
 *.rsuser
 *.suo
