--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,14 +23,11 @@ jobs:
       run: dotnet restore
     - name: Run tests
       run: dotnet test /p:CollectCoverage=true /p:CoverletOutputFormat=json /p:CoverletOutput='./coverage.json'
-    - run: |
-        pwd
-        ls -Rl
     - name: Upload coverage artifacts for .NET
       uses: actions/upload-artifact@v3
       with:
         name: dotnet-coverage
-        path: ./dotnet/coverage.json
+        path: ./Tests/coverage.json
 
   node:
     runs-on: ubuntu-latest
