--- a/node/package.json
+++ b/node/package.json
@@ -21,7 +21,7 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "collectCoverageFrom": "src/**/*.ts",
+    "collectCoverageFrom": ["src/**/*.ts"],
     "coverageReporters": ["json"]
   },
   "repository": {
