--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,7 +27,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: dotnet-coverage
-        path: ./Tests/coverage.json
+        path: ./dotnet/Tests/coverage.json
 
   node:
     runs-on: ubuntu-latest
@@ -46,14 +46,11 @@ jobs:
     - run: npm run type-check
     - run: npm run build
     - run: npm test -- --collectCoverage --coverageDirectory .
-    - run: |
-        pwd
-        ls -Rl
     - name: Upload coverage artifacts for Node.js
       uses: actions/upload-artifact@v3
       with:
         name: node-coverage
-        path: ./node/coverage.json
+        path: ./node/coverage-final.json
 
   merge-and-report:
     runs-on: ubuntu-latest
@@ -74,4 +71,4 @@ jobs:
       with:
         python-version: '3.10'
     - name: Merge coverage reports
-      run: python3 .scripts/merge-coverage-reports.py dotnet/coverage.json node/coverage.json
+      run: python3 .scripts/merge-coverage-reports.py dotnet/coverage.json node/coverage-final.json
