--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -70,5 +70,8 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+    - run: |
+        pwd
+        ls -Rl
     - name: Merge coverage reports
-      run: python3 .scripts/merge-coverage-reports.py dotnet/coverage.json node/coverage-final.json
+      run: python3 .scripts/merge_coverage_reports.py dotnet/coverage.json node/coverage-final.json
