--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -70,6 +70,9 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
+        cache: pip
+    - name: Install tools
+      run: python3 -m pip install bs4 lxml
     - name: Merge coverage reports
       run: python3 .scripts/merge_coverage_reports.py dotnet/coverage.xml node/coverage.xml > merged.xml
     - run: cat merged.xml
